--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.4.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-unicons": "^3.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
